--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
 <div class="outline-text-2" id="text-1">
 <ol class="org-ol">
 <li>
-<code>git push [origin|&lt;URL&gt;] &lt;branch&gt;</code> pushes changes to a particular remote repository
+<code>git push [origin|&lt;URL&gt;] &lt;branch&gt;</code> pushes changes to a particular
+remote repository
+</li>
+<li>
+<code>git remote</code>
 </li>
 <li>
 <code>git remote -v</code> find out information about remote
@@ -105,10 +109,24 @@
 <h2 id="sec-2"><code>branch</code></h2>
 <div class="outline-text-2" id="text-2">
 <ol class="org-ol">
-<li>\(x=x+y\)
+<li>
+<code>git branch -a</code> show all branches
+</li>
+<li>
+<code>git diff origin/master..master</code> show differences between local
+master and origin's master
 </li>
 </ol>
 </div>
+</div>
+
+<div id="outline-container-sec-3" class="outline-2">
+<h2 id="sec-3">
+<code>head</code> is a pointer to a branch</h2>
+</div>
+
+<div id="outline-container-sec-4" class="outline-2">
+<h2 id="sec-4"><a href="https://github.com/tj/git-extras">git-extras</a></h2>
 </div>
     </div>
     </article><article class="h-entry post-text"><header><h1 class="p-name entry-title"><a href="posts/vimgolf-one-number-per-line/" class="u-url">vimgolf: One number per line</a></h1>
